backup/metadata/objects/Room__c/fields/Available_From__c.field-meta.xml
<CustomField>
    <fullName>Available_From__c</fullName>
    <inlineHelpText>Date when room will be available</inlineHelpText>
    <label>Available From</label>
    <type>Date</type>
</CustomField>