backup/metadata/objects/Room__c/fields/Balcony__c.field-meta.xml
<CustomField>
    <fullName>Balcony__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the room have a balcony</description>
    <label>Balcony</label>
    <type>Checkbox</type>
</CustomField>