backup/metadata/objects/Room__c/fields/Base_Weekly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Weekly_Rate__c</fullName>
    <description>Base weekly rate for the room</description>
    <label>Base Weekly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>