backup/metadata/objects/Room__c/fields/Ensuite__c.field-meta.xml
<CustomField>
    <fullName>Ensuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the room have an ensuite bathroom</description>
    <label>Ensuite</label>
    <type>Checkbox</type>
</CustomField>