backup/metadata/objects/Room__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <inlineHelpText>Equipment available in room</inlineHelpText>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hoist</fullName>
            </value>
            <value>
                <fullName>Profiling Bed</fullName>
            </value>
            <value>
                <fullName>Call System</fullName>
            </value>
            <value>
                <fullName>TV Point</fullName>
            </value>
            <value>
                <fullName>Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Kitchenette</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>