backup/metadata/objects/Room__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <description>Floor number where room is located</description>
    <label>Floor Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>