backup/metadata/objects/Room__c/fields/Garden_Access__c.field-meta.xml
<CustomField>
    <fullName>Garden_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the room have direct garden access</description>
    <label>Garden Access</label>
    <type>Checkbox</type>
</CustomField>