backup/metadata/objects/Room__c/fields/Garden_View__c.field-meta.xml
<CustomField>
    <fullName>Garden_View__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the room have a garden view</description>
    <label>Garden View</label>
    <type>Checkbox</type>
</CustomField>