backup/metadata/objects/Room__c/fields/Ground_Floor__c.field-meta.xml
<CustomField>
    <fullName>Ground_Floor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the room on ground floor</description>
    <label>Ground Floor</label>
    <type>Checkbox</type>
</CustomField>