backup/metadata/objects/Room__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>