backup/metadata/objects/Room__c/fields/Last_Decorated__c.field-meta.xml
<CustomField>
    <fullName>Last_Decorated__c</fullName>
    <inlineHelpText>Date when room was last decorated</inlineHelpText>
    <label>Last Decorated</label>
    <type>Date</type>
</CustomField>