backup/metadata/objects/Room__c/fields/Near_Communal_Areas__c.field-meta.xml
<CustomField>
    <fullName>Near_Communal_Areas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the room near communal areas</description>
    <label>Near Communal Areas</label>
    <type>Checkbox</type>
</CustomField>