backup/metadata/objects/Room__c/fields/Next_Redecoration_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Redecoration_Due__c</fullName>
    <inlineHelpText>Date when next redecoration is due</inlineHelpText>
    <label>Next Redecoration Due</label>
    <type>Date</type>
</CustomField>