backup/metadata/objects/Room__c/fields/Quiet_Area__c.field-meta.xml
<CustomField>
    <fullName>Quiet_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the room in a quiet area of the home</description>
    <label>Located in Quiet Area</label>
    <type>Checkbox</type>
</CustomField>