backup/metadata/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <inlineHelpText>Type of room</inlineHelpText>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Double</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Communal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>