backup/metadata/objects/Room__c/fields/Size_SqM__c.field-meta.xml
<CustomField>
    <fullName>Size_SqM__c</fullName>
    <description>Room size in square meters</description>
    <label>Size (Square Meters)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>