backup/metadata/objects/Room__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current availability status of the room</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Under Maintenance</fullName>
            </value>
            <value>
                <fullName>Being Decorated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>