backup/metadata/objects/Room__c/fields/Suitable_for_Nursing_Care__c.field-meta.xml
<CustomField>
    <fullName>Suitable_for_Nursing_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the room suitable for nursing care</description>
    <label>Suitable for Nursing Care</label>
    <type>Checkbox</type>
</CustomField>