backup/metadata/objects/Room__c/fields/Walk_In_Shower__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Shower__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does it have a walk-in shower</description>
    <label>Walk-In Shower</label>
    <type>Checkbox</type>
</CustomField>