backup/metadata/objects/Room__c/fields/Wet_Room__c.field-meta.xml
<CustomField>
    <fullName>Wet_Room__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is it a wet room</description>
    <label>Wet Room</label>
    <type>Checkbox</type>
</CustomField>