backup/metadata/objects/Room__c/fields/Wheelchair_Accessible__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the room wheelchair accessible</description>
    <label>Wheelchair Accessible</label>
    <type>Checkbox</type>
</CustomField>