backup/metadata/objects/Room__c/fields/Wing__c.field-meta.xml
<CustomField>
    <fullName>Wing__c</fullName>
    <description>Wing or building designation</description>
    <label>Wing/Building</label>
    <length>100</length>
    <type>Text</type>
</CustomField>