backup/metadata/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Image_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>